--- a/tumor_classification.ipynb
+++ b/tumor_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "tumor classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN77mW9DxzaMNdHMr2KOfzc",
+      "authorship_tag": "ABX9TyMRGxUfdC62Noy847eQWGoz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,11 +111,13 @@
     {
       "cell_type": "code",
       "source": [
+        "from tensorflow.tools.docs.doc_controls import T\n",
         "from numpy.lib.function_base import append\n",
         "from keras.preprocessing.image import img_to_array\n",
         "from keras.applications.vgg16 import preprocess_input\n",
         "a=[]\n",
         "b=[]\n",
+        "target=[]\n",
         "for i in range(97):\n",
         "  img = image.load_img(\"N (\"+str(i+1)+\").jpg\")\n",
         "  img = image.load_img(\"N (\"+str(i+1)+\").jpg\", target_size=(224, 224))\n",
@@ -123,6 +125,7 @@
         "  # prepare the image for the VGG model\n",
         "  img = preprocess_input(img)\n",
         "  a.append(img)\n",
+        "  target.append(0)\n",
         "for i in range(155):\n",
         "  img = image.load_img(\"Y (\"+str(i+1)+\").jpg\")\n",
         "  img = image.load_img(\"Y (\"+str(i+1)+\").jpg\", target_size=(224, 224))\n",
@@ -130,6 +133,8 @@
         "  # prepare the image for the VGG model\n",
         "  img = preprocess_input(img)\n",
         "  b.append(img)\n",
+        "  target.append(1)\n",
+        "\n",
         "print(len(a))\n",
         "print(len(b))"
       ],
@@ -138,7 +143,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e80135e5-0b24-4b26-b17a-07fd7577f7ef"
+        "outputId": "04161e9f-012d-422d-c7b5-3630e2edc2f0"
       },
       "execution_count": null,
       "outputs": [
@@ -229,33 +234,9 @@
     {
       "cell_type": "code",
       "source": [
-        "model = vgg16.VGG16()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JXe18yWUCiDz",
-        "outputId": "4477338d-7951-4f71-c4d5-8bc9806b7b6d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels.h5\n",
-            "553467904/553467096 [==============================] - 3s 0us/step\n",
-            "553476096/553467096 [==============================] - 3s 0us/step\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from keras.applications.vgg16 import VGG16\n",
         "model = VGG16(include_top=False, input_shape=(224, 224, 3))\n",
+        "model.compile(optimizer='adam', loss='categorical_crossentropy')\n",
         "print(model.summary())"
       ],
       "metadata": {
@@ -263,7 +244,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I8B4A4ddsX5x",
-        "outputId": "2f9af468-f447-440f-9730-03824957a94b"
+        "outputId": "e4447dd8-3dc9-41da-aba0-fb34ffc97bb0"
       },
       "execution_count": null,
       "outputs": [
@@ -271,14 +252,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "58892288/58889256 [==============================] - 1s 0us/step\n",
-            "58900480/58889256 [==============================] - 1s 0us/step\n",
             "Model: \"vgg16\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " input_2 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+            " input_5 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
             "                                                                 \n",
             " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
             "                                                                 \n",
